--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/image": "1.10.0",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "nuxt": "^4.0.0",
+    "sass-embedded": "^1.89.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.2"
   }
