--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "nuxt": "^4.0.0",
     "sass-embedded": "^1.89.2",
+    "three": "^0.160.1",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.160.0"
   }
 }
