タグ提案機能の実装とFAB Speed Dialの追加
- タグ提案システムのバックエンドAPIを実装（PHP + SQLite）
  - tag_suggestionsテーブルとapproved_tagsテーブルを作成
  - GET/POSTエンドポイントでタグの取得と提案登録に対応
  - 地域別・図鑑番号別のタグ管理機能を追加
- ポケモン詳細ページにFAB Speed Dialを追加
  - ページトップへ戻る、一覧へ戻る、前後のポケモンへの移動機能
  - ページ

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@
 # 開発: '/'
 # 本番 (GitHub Pages 例): '/pokedex-online/'
 NUXT_PUBLIC_APP_BASE_URL="/"
+
+# タグ管理システム認証情報
+# ログイン用のユーザー名とパスワードを設定してください
+TAGS_ADMIN_USER="admin"
+TAGS_ADMIN_PASS="your_secure_password_here"
